# SIVF-renderer-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
files_sivf/: black_rectange.yaml  black_square.yaml  blue_triangle.yaml  circle.yaml  dmytruek_logo_bg.yaml  fuschsia_right_triangle.yaml  gradient_random.yaml  gradient_rgby_fading.yaml  gradient_with_circle.yaml  grey_bg.yaml  random_gradient.yaml  rectange.yaml  red_circle.yaml  red_square.yaml  rgby_gradient.yaml  square_rgby.yaml  test_percents_x_y.yaml  triangle.yaml  triangle_equilateral_upsidedown.yaml  triangle_rgb.yaml  triangle_rgb_with_supportive_points.yaml  wallpaper_black_rectange.yaml  wallpaper_black_square.yaml
sivf_files/: wallpaper_black_square.yaml
src/: help.rs  main.rs
src/sivf_items/: mod.rs  sivf_any.rs
src/sivf_items/sivf_complex/: layer.rs  mod.rs
src/sivf_items/sivf_objects/: circle.rs  mod.rs
src/sivf_misc/: blend_types.rs  blending.rs  canvas.rs  color.rs  keywords_and_consts.rs  metric_units.rs  mod.rs  render.rs  serde.rs  simple_expr_eval.rs  sivf_struct.rs  sizes.rs  trait_render.rs  vals.rs
src/sivf_objects/: _blend_types.rs  _canvas.rs  _sivf_metric_units.rs  _sivf_struct.rs  _trait_render.rs  circle.rs  layer.rs  mod.rs  sivf_any_object.rs  sivf_object.rs
src/sivf_objects/complex/: gradient.rs  layer.rs  mod.rs
src/sivf_objects/shapes/: circle.rs  mod.rs  rectangle.rs  square.rs  triangle.rs
src/sivf_objects/sivf_complex/: layer.rs  mod.rs
src/utils/: array2d.rs  array2d_flat.rs  color.rs  date_time.rs  io.rs  macros.rs  mod.rs  random.rs  simple_expr_eval.rs  sizes.rs  string.rs  string_test.rs  vec2d.rs
tests/: integration_test_1.rs
(+16 files in other folders)
