[package]
name = "sivf-renderer-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
#target-cpu = "native"
#debuginfo = 0

[dependencies]
chrono = "*"
#clap = "*"
#derive_more = "*"
evalexpr = "*"
image = "*"
#itertools = "*"
regex = "*"
serde_yaml = "*"
#serde = "*"
#serde_derive = "*"
#serde_json = "*"
