[package]
name = "sivf-renderer-rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debuginfo = 0
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
chrono = "0.4.22"
evalexpr = "8.1.0"
image = "0.24.4"
rand = "0.8.5"
regex = "1.6.0"
serde_yaml = "0.9.13"
#clap = "*"
#derive_more = "*"
#itertools = "*"
#serde = "*"
#serde_derive = "*"
#serde_json = "*"
